--- a/assets/style.css
+++ b/assets/style.css
@@ -103,6 +103,51 @@ header nav ul li a {
     line-height: 1.6;
     text-shadow: var(--shadow);
 }
+
+/*Work Guts*/
+
+.work {
+    display: flex;
+    flex: 1 auto;
+    background-color: var(--primary);
+}
+
+.work h2 {
+    color: var(--secondary);
+}
+
+.img-grid {
+    --gap: 16px;
+    --num-cols:2;
+    --row-height: 300px;
+    width:90%;
+    box-sizing: border-box;
+    padding: var(--gap);
+    display: grid;
+    grid-template-columns: repeat(var(--num-cols), 1fr);
+    grid-auto-rows: var(--row-height);
+    gap: var(--gap);
+}
+
+.img-grid > img {
+    width:100%;
+    height:100%;
+    object-fit: cover;
+}
+.img-grid-col-2 {
+    grid-column: span 2;
+}
+
+.img-grid-row-2 {
+    grid-row:span 2;
+}
+
+#run-buddy {
+    grid-column: 1/3;
+    grid-row: span 2;
+    background-image: url("./images/run-buddy.png");
+    background-position: none;
+}
 /*Footer guts*/
 
 .contact {
