--- a/assets/style.css
+++ b/assets/style.css
@@ -120,6 +120,8 @@ header nav ul li a {
 
 .about {
     display:flex;
+    background-color: #6b6ac5;
+    border-radius: 16px;
 }
 
 .me {
@@ -140,6 +142,8 @@ header nav ul li a {
     display: flex;
     flex: 1 auto;
     background-color: var(--primary);
+    background-color: #5d9ae6;
+    border-radius: 16px;
 }
 
 .work h2 {
