--- a/assets/style.css
+++ b/assets/style.css
@@ -185,6 +185,11 @@ header nav ul li a {
     background-position: auto;
 }
 
+#spirit {
+    background-image: url("./images/spirit.jpg");
+    background-position:center;
+    background-size: cover;
+}
 .soon {
     background-image: url("./images/coming-soon.png")
 }
