--- a/assets/style.css
+++ b/assets/style.css
@@ -179,16 +179,23 @@ header nav ul li a {
 }
 
 #run-buddy {
-    grid-column: 1/3;
-    grid-row: span 2;
+
     background-image: url("./images/run-buddy.png");
-    background-position: auto;
+    background-position: center;
+    background-size:cover;
 }
 
 #spirit {
     background-image: url("./images/spirit.jpg");
     background-position:center;
     background-size: cover;
+}
+
+#woof-call {
+    grid-column: 1/3;
+    grid-row: span 2;
+    background-image:url("./images/pawnder.png");
+    background-position: auto;
 }
 .soon {
     background-image: url("./images/coming-soon.png")
